# sysmon

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  manpage.md  sysmon  sysmon.desktop
Img/: README.md
cmake/: FindReadline.cmake
include/: config.hpp  cpu.hpp  draw.hpp  input.hpp  mem.hpp  net.hpp  proc.hpp  sysmon.hpp  theme.hpp
snap/: snapcraft.yaml
src/: config.cpp  cpu.cpp  draw.cpp  input.cpp  mem.cpp  net.cpp  proc.cpp  sysmon.cpp  theme.cpp
src/linux/: README.md
tests/: README.md
themes/: Dracula.theme  Gruvbox.theme  Nord.theme  onedark.theme  tokyo-night.theme
